--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "pnpm@9.15.3",
+  "engines": {
+    "node": "22.13.0"
+  }
 }
