--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -14,5 +14,8 @@
     "hardhat": "^2.22.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
   }
 }
