--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@privy-io/react-auth": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
