--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,9 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@privy-io/react-auth": "^2.0.1",
+    "@tanstack/react-query": "^5.63.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "viem": "2.x",
+    "wagmi": "^2.14.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
