--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@privy-io/react-auth": "^2.0.1",
+    "@privy-io/wagmi": "^1.0.1",
     "@tanstack/react-query": "^5.63.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
