--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -2,7 +2,7 @@
   "name": "@pajama/contract",
   "version": "1.0.0",
   "scripts": {
-    "compile": "hardhat compile",
+    "compile": "hardhat compile && ncp ./artifacts/contracts/Raffle.sol ../client/src/_generated",
     "test": "hardhat test",
     "deploy": "hardhat run scripts/deploy.ts"
   },
@@ -12,6 +12,7 @@
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "ethers": "^6.13.5",
     "hardhat": "^2.22.17",
+    "ncp": "^2.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
