--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
     "@privy-io/react-auth": "^2.0.1",
     "@privy-io/wagmi": "^1.0.1",
     "@tanstack/react-query": "^5.63.0",
+    "framer-motion": "^11.17.0",
     "permissionless": "^0.2.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
