--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,8 +15,8 @@
     "@privy-io/react-auth": "^2.0.1",
     "@privy-io/wagmi": "^1.0.1",
     "@tanstack/react-query": "^5.63.0",
-    "framer-motion": "^11.17.0",
     "@wagmi/core": "^2.16.3",
+    "framer-motion": "^11.17.0",
     "permissionless": "^0.2.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,6 +30,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "csstype": "^3.1.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
